--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -33,9 +33,13 @@ dist.jar=${dist.dir}/landrini.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.commons-validator-1.7.jar=commons-validator-1.7.jar
+file.reference.data.jar=data.jar
 includes=**
 jar.compress=true
-javac.classpath=
+javac.classpath=\
+    ${file.reference.commons-validator-1.7.jar}:\
+    ${file.reference.data.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
